--- a/src/Pages/edit-xl.css
+++ b/src/Pages/edit-xl.css
@@ -89,9 +89,105 @@
     padding: .5rem;
 }
 
+.btn-wrapper-table {
+    display: flex;
+    justify-content: space-between;
+    padding: .5rem;
+    gap: 1rem;
+}
+
+.btn-wrapper-table button {
+    padding: .5rem;
+    border: 1px solid black;
+    border-radius: 5px;
+    background-color: blueviolet;
+    color: white;
+}
+
+.btn-wrapper-table button:nth-child(2) {
+    margin-left: auto;
+    background-color: brown;
+}
+
+.add-row-wrapper {
+    padding: 5vw;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.add-row {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    gap: 1rem;
+    width: 90%;
+    font-size: .7rem;
+}
+
+.add-row input {
+    padding: .5rem;
+}
+
+.input-wrapper {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    gap: .3rem;
+}
+
+.input-wrapper label {
+    font-weight: 500;
+}
+
+.add-row button {
+    padding-block: 0;
+    height: 100%;
+    margin-top: auto;
+    padding: .5rem;
+    background-color: blueviolet;
+    border: 1px solid black;
+    border-radius: 5px;
+    color: white;
+}
+
+.table {
+    margin: auto;
+    width: 90%;
+    display: flex;
+    justify-content: center;
+}
+
+.table-wrapper {
+    max-height: 100vh;
+    width: 100%;
+    overflow-x: auto;
+    overflow-y: auto;
+    /* display: flex;
+    justify-content: center; */
+    /* align-items: center;
+    max-width: 95vw;
+     max-height: 100vh;
+    overflow: auto;
+    margin-right: 0;   */
+}
+
+table {
+    /* width: 100%; */
+    margin-left: auto;
+    margin-right: auto;
+
+}
+
 table,
 th,
 td {
     border: 1px solid black;
     border-collapse: collapse;
+}
+
+tr:nth-child(even) {
+    background-color: #f2f2f2;
 }
