--- a/src/Pages/loginSign.css
+++ b/src/Pages/loginSign.css
@@ -294,7 +294,7 @@
     flex-direction: column;
     justify-content: center;
     padding: 2rem;
-    border-radius: 20px;
+    border-radius: 20pxp;
     /* height: 80vh; */
     box-shadow: 1px 3px 15px 5px rgba(0, 0, 0, 0.56);
     /* align-items: center; */
@@ -323,4 +323,40 @@
 
 .loginButton-signUpPage:hover {
     background-color: rgb(33, 10, 55);
+}
+
+.edit-input {
+    display: flex;
+    justify-content: center;
+    margin: 2rem;
+    /* flex-direction: column; */
+    align-items: center;
+    gap: 1rem;
+}
+
+.edit-input span {
+    font-weight: 600;
+
+}
+
+.edit-input input {
+    padding: .5rem;
+}
+
+.edit-input button {
+    padding: .5rem;
+}
+
+.edit-head {
+    display: flex;
+    justify-content: center;
+    gap: 2rem;
+}
+
+.edit-input-wrapper {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    gap: 1rem;
 }
